--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "animejs": "^4.2.2",
     "pinia": "^3.0.4",
     "vue": "^3.5.26"
   },
